	Define GPG, WGET conditionally.
	(CygbuildGPGavailableCheck): Change from negative tests
	to positive tests.
	(CygbuildCmdDownloadCygwinPackage): Rewrite WGET test.
	(CygbuildCommandMain): Move `CygbuildDefineGlobalCommands'
	here from CygbuildCommandMain().
	(CygbuildCmdDownloadCygwinPackage): Rewite wget test.
	(CygbuildDefineGlobalCommands): Remove variable BASH.

	[ commit: 21c6baa ]

	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalCacheSet): Move
	message. Clear CYGBUILD_CACHE_PERL_FILES if no cache can be set.
	(CygbuildPerlLibraryDependsCache): Check cache variable.

	[ commit: 0a6b221..6cc78b6 ]

	* bin/cygbuild.sh: REFACTORING: Convert all $LS, $MV etc.
	variables into regular calls in series of commits.

	[ up to commit: 0a6b221 ]

	* bin/cygbuild.pl: (HELP::QUICK OVERVIEW): Remove key id
	and use $GPGKEY variable in example.

	* README: Adjust short description.
	(Version control information): Add new topic.
	(Version control information): Moved from INSTALL.
	(Dependencies): Moved from INSTALL.

	* INSTALL: (Install instructions): Mention /usr/local and
	prefix= setting. Remove verything but install instructions.

	* Makefile: (install-etc-main-symlink): disable installing
	/etc/cygbuild/programs.conf. No longer used.

	* bin/cygbuild.sh: (CygbuildInstallFixInterpreterPerl): Improve
	perl replace code. Display message only if something was done.
	(CygbuildInstallFixInterpreterMain): Move message to function
	`CygbuildInstallFixInterpreterPerl'.
	(CygbuildDefineGlobalCommands): Disable loading configuration
	file.
	(CygbuildBootVariablesGlobalEtcSet): Remove
	CYGBUILD_CONFIG_PROGRAMS (/etc/programs.conf).
	(CygbuildVersionControlType): Mention why ARCH and RCS are
	not tested.

2008-03-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (HELP::LIBRARY USAGE): Remove initial
	boot call.
	(TROUBLESHOOTING): Adjust paragraph wording.
	(Perl and double install is needed): Removed.
	(Install commands): Remove traces of --init-db option.